--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "SDAHymnBook",
+    "name": "SDA Hymn Book",
     "slug": "SDAHymnBook",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/SDA_logo.png",
     "scheme": "sdahymnbook",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -33,7 +33,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true
